--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -15,13 +15,13 @@
 </div>
 <div id = "servicesMenu">
 <!-- Add a table and iteratively (using our th:block and th:each combo) add rows for the values in appropriateFacials -->
-    <table>
-        <th:block th:each = "facial: ${appropriateFacials}">
-            <tr>
-                <td th:text = "${facial}"></td>
-            </tr>
-        </th:block>
-    </table>
+<!--    <table>-->
+<!--        <th:block th:each = "facial: ${appropriateFacials}">-->
+<!--            <tr>-->
+<!--                <td th:text = "${facial}"></td>-->
+<!--            </tr>-->
+<!--        </th:block>-->
+<!--    </table>-->
 
 
 
