--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,22 +9,34 @@
 <h1>My Super Fancy Spa</h1>
 <h2>My Profile</h2>
 <p th:text = "${name}"></p>
-<p th:text ="${skintype}"></p>
-<p th:text ="${manipedi}"></p>
+<p th:text = "${skintype}"></p>
+<p th:text = "${manipedi}"></p>
 <div id = "clientProfile">
 </div>
 <div id = "servicesMenu">
-<!-- Add a table and iteratively (using our th:block and th:each combo) add rows for the values in appropriateFacials -->
-<!--    <table>-->
-<!--        <th:block th:each = "facial: ${appropriateFacials}">-->
-<!--            <tr>-->
-<!--                <td th:text = "${facial}"></td>-->
-<!--            </tr>-->
-<!--        </th:block>-->
-<!--    </table>-->
+<!-- Add a table iteratively (using our th:block and th:each combo) add rows for the values in appropriateFacials-->
+    <table>
+        <th:block th:each = "facial: ${recommendedTreatments}">
+            <tr>
+                <td th:text = "${facial}"></td>
+            </tr>
+        </th:block>
+    </table>
 
-
-
+    <!-- Use th:if to determine if the value of manipedi is a "manicure" or "pedicure".-->
+    <div th:if="${manipedi=='manicure'}">
+        <!-- We want to put the description in a div along with an h3 stating that it is either a manicure or pedicure. This new div should be inside the servicesMenu div.-->
+        <!-- If the value of manipedi is "manicure", the div element containing the h3 that says "Manicure" needs to be on the page.-->
+        <h3>Manicure</h3>
+        <!-- the p tag needs to be replaced with the fragment of the manicure description from fragments.html -->
+        <p th:replace = "fragments :: manicureDescription"></p>
+    </div>
+    <div th:if="${manipedi=='pedicure'}">
+        <!-- If the value of manipedi is "pedicure", the div element containing the h3 that says "Pedicure" needs to be on the page -->
+        <h3>Pedicure</h3>
+        <!--The p tag needs to be replaced with the fragment of the pedicure description from fragments.html-->
+        <p th:replace = "fragments :: pedicureDescription"></p>
+    </div>
 </div>
 </body>
 </html>
