--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -18,6 +18,12 @@
             Password:
             <input type="password" name="password">
         </label>
+        <label>
+            Verify Password:
+            <input type="password" name="verify">
+        </label>
+        <p th:text="${error}"></p>
+        <input type="submit" value="Sign Up">
     </form>
 </body>
 </html>
