--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:th = "http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
+    <title>Sign Up</title>
 </head>
 <body>
-    <form method="post" th:action="@{/user}">
+    <form method = 'post' th:action="@{/user}">
         <label>
             Username:
-            <input type="text" name="username" th:value="${username}">
+            <input type = 'text' name = 'username' th:value="${username}">
         </label>
+
         <label>
             Email:
-            <input type="text" name="email" th:value="${email}">
+            <input type = 'email' name = 'email' th:value="${email}">
         </label>
+
         <label>
             Password:
-            <input type="password" name="password">
+            <input type = 'password' name = 'password'>
         </label>
+
         <label>
             Verify Password:
-            <input type="password" name="verify">
+            <input type = 'password' name = 'verify'>
         </label>
+
         <p th:text="${error}"></p>
-        <input type="submit" value="Sign Up">
+
+        <input type = 'submit' value = 'Sign Up'>
     </form>
+
 </body>
 </html>
